see that file and the SVN log for more historic information.  The
entire history of the project is available through SVN.

----------------------------------------------------------------------
--- 2008-04-01  Release 7.12.1                                     ---
----------------------------------------------------------------------

* added uniform binary object creation to mged GUI - John Anderson
* added e, l, o, i options to mged saveview command - Sean Morrison


----------------------------------------------------------------------
--- 2008-03-11  Release 7.12.0                                     ---
----------------------------------------------------------------------

Coalescing after just over a year of concentrated development efforts,
this release unveils a plethora of Windows-specific enhancements, bug
fixes, and additional tools ported.  Notably, the Windows improvements
include fixing various issues with file management and porting many
more ray tracers, geometry converters, framebuffer tools, and MGED
classic mode support.

This release also includes a new geometry converter for the United
Kingdom's INTAVAL format from Her Majesty's Ministry of Defence.  The
new importer was jointly developed by TNO PML and IABG mbH and is
included in the BRL-CAD sources as a contributed module.

Of the numerous bug fixes and feature enhancements in this release,
one of the biggest productivity enhancements is the addition of the
mged "clone" and "tracker" commands.  Clone is a very powerful yet
simple command that provides an intuitive means for performing deep
copies of objects.  Tracker provides an interface for replicating
objects along a spline path.  These 'new' commands originate from
modifications originally developed by the now defunct Geometric
Solutions, Inc., and after receiving considerable updates and rewrites
are now once again available to users.

Finally, this release also marks a major change to the BRL-CAD source